tests/expectations/compiler/tuple/tuple_in_record_fail.out
DCE_ENABLED:
Error [ETYC0372050]: A record cannot contain a tuple.
    --> compiler-test:5:9
     |
   5 |         amounts: (u64, u64),
     |         ^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372050]: A record cannot contain a tuple.
    --> compiler-test:5:9
     |
   5 |         amounts: (u64, u64),
     |         ^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
